# nlp2-peft-vs-icl

./: .gitignore  README.md  environment.yaml  evaluate.py  main.py  pyproject.toml  requirements.txt  sweep.sh  train.py  utils.py
config/prompts/: gsm8k.txt  gsm8k_fewshot.txt  math.txt  math_fewshot.txt
jobs/: run_eval_0s_llama2.job  run_eval_1s_llama2.job  run_eval_3s_llama2.job  run_eval_8s_llama2.job  run_eval_fewshot.job  run_eval_fs.job  run_eval_llama2_0s.job  run_eval_llama2_0s_greedy.job  run_eval_llama2_1s.job  run_eval_llama2_1s_greedy.job  run_eval_llama2_3s.job  run_eval_llama2_3s_greedy.job  run_eval_llama2_8s.job  run_eval_llama2_8s_greedy.job  run_eval_llama3_0s.job  run_eval_llama3_1s.job  run_eval_llama3_3s.job  run_eval_llama3_8s.job  run_eval_zeroshot.job  run_eval_zs.job  run_eval_zs_llama3.1.job  run_peft.job
model_outputs/aime/: meta-llama_Meta-Llama-3-8B-Instruct_k=0_answers.json  meta-llama_Meta-Llama-3-8B-Instruct_k=8_answers.json
model_outputs/gsm8k/: meta-llama_Llama-2-7b-hf_k=0_answers.json  meta-llama_Llama-2-7b-hf_k=0_output.json  meta-llama_Llama-2-7b-hf_k=1_answers.json  meta-llama_Llama-2-7b-hf_k=1_output.json  meta-llama_Llama-2-7b-hf_k=3_answers.json  meta-llama_Llama-2-7b-hf_k=8_answers.json  meta-llama_Llama-3.1-8B-Instruct_k=0_answers.json  (+10 more)
scripts/: create_conda_venv.sh  create_venv.sh  run_jobs_base.sh  run_jobs_instruct.sh  run_jobs_lora_eval.sh  sweep_config.yaml
src/: data.py  evaluation.py  hf.py  main_check.py  main_eval.py  main_eval_lora.py  main_peft.py  main_train.py  test.ipynb
src/evaluation/: evaluate.py
(+54 files in other folders)
