[project]
name = "nlp2-peft-vs-icl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "bitsandbytes>=0.45.4",
    "datasets>=3.5.0",
    "peft>=0.15.1",
    "transformers>=4.50.3",
    "trl>=0.16.0",
    "vllm>=0.8.2",
]
