[project]
name = "nlp2-peft-vs-icl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "datasets>=3.5.0",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "python-dotenv>=1.1.0",
    "vllm>=0.8.4",
]
