[project]
name = "nlp2-peft-vs-icl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "datasets>=3.5.0",
    "huggingface-hub[cli]>=0.30.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "peft>=0.15.2",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "torchvision>=0.21.0",
    "trl>=0.18.1",
    "vllm>=0.8.4",
    "wandb>=0.19.11",
]
